[gd_scene load_steps=3 format=3 uid="uid://dapfgqpi5qmlf"]

[ext_resource type="Script" uid="uid://dnhfnagrhhbrb" path="res://Scripts/mainmenu.gd" id="1_pwset"]
[ext_resource type="Theme" uid="uid://bu1wtqkrwnyj6" path="res://Themes/UITheme.tres" id="1_qshck"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_pwset")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qshck")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qshck")

[node name="PanelContainer" type="PanelContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -162.0
offset_right = 234.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qshck")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_qshck")

[node name="Play" type="Button" parent="Control/Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_qshck")
text = "Play"

[node name="Settings" type="Button" parent="Control/Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_qshck")
text = "Settings"

[node name="Exit" type="Button" parent="Control/Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_qshck")
text = "Exit"

[connection signal="pressed" from="Control/Panel/PanelContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/Panel/PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/Panel/PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
